2011-02-27  Robby Stephenson  <robby@periapsis.org>

	* Fixed parsing bug with AnimeNfo results.

2011-02-23  Regis Boudin

	* Updated videodev include for compatibility with Linux kernel 2.6.38+.

2011-02-21  Robby Stephenson  <robby@periapsis.org>

	* Added data source for douban.com.

2011-02-19  Robby Stephenson  <robby@periapsis.org>

	* Added data source fetcher for filmaster.com.

2011-02-18  Regis Boudin

	* Fixed build with GCC 4.6.

2011-02-13  Robby Stephenson  <robby@periapsis.org>

	* Added check for duplicate bibtex keys (Bug 245225).

2011-02-02  Robby Stephenson  <robby@periapsis.org>

	* Added capability to import ADS format for z39.50 sources.

2011-01-11  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with parsing empty table values (Bug 261108).

2011-01-03  Robby Stephenson  <robby@periapsis.org>

	* Fixed parsing bug with IMDb results (Bug 262036).

2010-12-12  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.2.

2010-12-11  Robby Stephenson  <robby@periapsis.org>

	* Updated Bibtex handler to translate ~ to non-breaking space.

2010-12-08  Robby Stephenson  <robby@periapsis.org>

	* Updated Allocine script to version 0.7.3 (Bug 258281).

2010-12-03  Robby Stephenson  <robby@periapsis.org>

	* Fixed sorting multiple numeric values in column view.
	* Fixed sorting for numeric values in group view.

2010-12-01  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with FreeDB results not using track artists (Bug 258541).
	* Fixed bug with importing Bibtex file with keyword and keywords fields (Bug 258269);

2010-11-23  Robby Stephenson  <robby@periapsis.org>

	* Fixed Google Scholar fetcher to properly set bibtex cookie.

2010-11-21  Robby Stephenson  <robby@periapsis.org>

	* Added cover art to MusicBrainz fetcher.

2010-11-20  Robby Stephenson  <robby@periapsis.org>

	* Switched Nepomuk requirement to optional for file metadata. 

2010-11-14  Robby Stephenson  <robby@periapsis.org>
